Bug 45237 - Tool ID not saved in property
Summary: Tool ID not saved in property
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/wacom (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-25 10:48 UTC by Bastien Nocera
Modified: 2012-10-08 18:09 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Bastien Nocera 2012-01-25 10:48:03 UTC
<poojig> the kernel is sending the proper ABS_MISC event, but for some reason its value isn't being saved to the device state for devices which aren't protocol 5 (e.g. Cintiq and Intuos)
Comment 1 Jason Gerecke 2012-01-25 18:07:09 UTC
After trying out a few things, I'm not sure where the problem lies. My best guess at the moment is that its a kernel bug, but the evidence is sketchy. Its the only thing that's managed to fix the bug on the one system I have which shows similar behavior. Unfortunately its "buggy" kernel was built from an unknown commit sometime between 3.2.0-rc3 and 3.2.0-rc4 and its image is incompatible with my other boxes...
Comment 2 Jason Gerecke 2012-10-02 21:58:02 UTC
Did some more looking into this issue and discovered the root cause was an incorrect prerequisite check by wcmUpdateSerial. Patch sent to linuxwacom-devel:

http://sourceforge.net/mailarchive/forum.php?thread_name=1349214788-31710-1-git-send-email-killertofu%40gmail.com&forum_name=linuxwacom-devel
Comment 3 Jason Gerecke 2012-10-08 18:09:03 UTC
commit 72508ebe5533501758aad073f120b50f04ac0060
Author: Jason Gerecke <killertofu@gmail.com>
Date:   Tue Oct 2 14:29:24 2012 -0700

    Fix prerequisite check in wcmUpdateSerial


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.